# Movieticketcounter

./: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  README.md  conanfile.py
.docker/: docker-compose.yml
.github/workflows/: cmake-multi-platform.yml  publish-protos.yml
sql/: schema.sql
src/: config.json  db.cc  db.h  kiosk_server.cc
tests/: db_test.cc
